tests/agl/rejections/type/ctor_standard_field_shorthand.agl
record Pair
  left: int
  right: text

let left = 1
let right = "right"
let pair = Pair(right, left)
pair
